Adjust GMM smoke test for Java 17